--- a/index.css
+++ b/index.css
@@ -3,40 +3,127 @@
     padding: 0;
 }
 body{
-    
+    color: #D3D0CB;
 }
 .wrapper{
+    background-color: #393E41;
     display: grid;
     height: 100vh;
+    width: 100vw;
     grid-template-rows: 1fr 9fr 1fr;
 }
 header{
-    background-color: blue;
-    display: flex;
+/*     background-color: blue;
+ */    display: flex;
     flex-direction: row;
     justify-content: start;
+    margin-bottom: -5em;
+}
+.logo{
+/*     background-color: red;
+ */    width: 20%;
+}
+header .logo img{
+    width: 200px;
 }
 nav{
-    background-color: aqua;
+/*     background-color: aqua;
+ */    display: flex;
+    align-items: center;
+    column-gap: 1em;
+    justify-content: flex-end;
     width: 100%;
+    margin-right: 1em;
+}
+.btn{
+    font-size: 1.5em;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    border-radius: 4px;
+
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+}
+.btn:focus,
+.btn:active:focus {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+}
+.btn:hover,
+.btn:focus {
+    color: #393E41;
+    text-decoration: none;
+}
+.btn:active {
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+.btn-default {
+    color: #393E41;
+    background-color: #E7E5DF;
+    border-color: #ccc;
+}
+.btn-default:focus {
+    color: #393E41;
+    background-color: #e6e6e6;
+    border-color: #8c8c8c;
+}
+.btn-default:hover {
+    color: #393E41;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+.btn-default:active {
+    color: #393E41;
+    background-color: #e6e6e6;
+    border-color: #adadad;
 }
 section{
-    background-color: brown;
-    display: flex;
+/*     background-color: brown;
+ */    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 article{
-    background-color: salmon;
+/*     background-color: salmon;
+ */    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+}
+article h2{
+    font-size: 3em;
+}
+article h2 span{
+    color: #E7BB41;
+    font-size: 2em;
+    margin-left: 1em;
 }
 aside{
-    background-color: deeppink;
+/*     background-color: deeppink;
+ */    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
 }
-img{
-
+aside img{
+    width: 100%;
 }
 footer{
-    background-color: chocolate;
-}
+/*     background-color: chocolate;
+ */}
