--- a/index.css
+++ b/index.css
@@ -4,12 +4,18 @@
 }
 body{
     color: #D3D0CB;
+    background-color: #D3D0CB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .wrapper{
+}
+.container{
     background-color: #393E41;
     display: grid;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     grid-template-rows: 1fr 9fr 1fr;
 }
 header{
@@ -115,15 +121,21 @@ article h2 span{
     margin-left: 1em;
 }
 aside{
-/*     background-color: deeppink;
- */    display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    padding: 2em;
 }
 aside img{
-    width: 100%;
+    width: 80%;
 }
 footer{
-/*     background-color: chocolate;
- */}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+footer p{
+    font-size: 0.5em;
+}
