--- a/ledningen.css
+++ b/ledningen.css
@@ -13,30 +13,31 @@ body{
     width: 80vw;
 }
 .container{
-    background-color: #393E41;
     display: grid;
     height: 100vh;
     width: 100%;
     grid-template-rows: 1fr 9fr 1fr;
+    box-sizing: border-box;
 }
 header{
-/*     background-color: blue;
- */    display: flex;
+    background-color: #393E41;
+    display: flex;
     flex-direction: row;
     justify-content: start;
     margin-bottom: -5em;
     height: 10em;
+    margin: 1em 0 1em 0;
 }
 .logo{
-/*     background-color: red;
- */    width: 20%;
+    width: 20%;
+    display: flex;
+    align-items: center;
 }
 header .logo img{
     width: 200px;
 }
 nav{
-/*     background-color: aqua;
- */    display: flex;
+   display: flex;
     align-items: center;
     column-gap: 1em;
     justify-content: flex-end;
@@ -102,6 +103,8 @@ nav{
     border-color: #adadad;
 }
 section{
+    background-color: #393E41;
+  
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -131,6 +134,7 @@ aside{
     justify-content: space-evenly;
     width: 100%;
     padding: 2em;
+    margin-bottom: -2em;
 }
 aside .elian, .kalle{
     width: 100%;
@@ -141,11 +145,14 @@ aside span{
     font-size: 1em;
 }
 footer{
+    background-color: #393E41;
+    margin: 1em 0 0 0;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 footer p{
+
     font-size: 0.5em;
 }
