--- a/login.css
+++ b/login.css
@@ -16,23 +16,25 @@ body{
     width: 80vw;
 }
 .container{
-    background-color: #393E41;
+    
     display: grid;
     height: 100vh;
     width: 100%;
     grid-template-rows: 1fr 9fr 1fr;
 }
 header{
-    /*     background-color: blue;
-     */    display: flex;
-        flex-direction: row;
-        justify-content: start;
-        margin-bottom: -5em;
-        height: 10em;
+    background-color: #393E41;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    margin-bottom: -5em;
+    height: 10em;
+    margin: 1em 0 1em 0;
 }
 .logo{
-    /*     background-color: red;
-     */    width: 20%;
+    width: 20%;
+    display: flex;
+    align-items: center;
 }
 header .logo img{
     width: 200px;
@@ -105,6 +107,7 @@ nav{
     border-color: #adadad;
 }
 section{
+    background-color: #393E41;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +119,8 @@ article{
 
 }
 footer{
+    background-color: #393E41;
+    margin: 1em 0 0 0;
     display: flex;
     align-items: center;
     justify-content: center;
